--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
+    "react-bootstrap-typeahead": "^6.0.0-rc.3",
     "react-datetime": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-imask": "^6.4.2",
