--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-bootstrap-typeahead": "^6.0.0-rc.3",
     "react-datetime": "^3.1.1",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-imask": "^6.4.2",
     "react-input-mask": "^3.0.0-alpha.2",
